# spice-client

./: examples.ipynb  main.py  pyproject.toml  regenerate_client.sh  tox.ini
.github/workflows/: publish.yml
spice_client/: __init__.py  api_client.py  configuration.py  exceptions.py  rest.py
spice_client/api/: default_api.py
spice_client/models/: __init__.py  asset.py  asset_create.py  asset_list.py  asset_update.py  dilution_summary.py  experiment.py  experiment_create.py  experiment_list.py  experiment_results_response.py  experiment_results_summary_compact.py  experiment_update.py  probe.py  (+39 more)
test/: test_asset.py  test_asset_create.py  test_asset_list.py  test_asset_update.py  test_default_api.py  test_dilution_summary.py  test_experiment.py  test_experiment_create.py  test_experiment_list.py  test_experiment_results_response.py  test_experiment_results_summary_compact.py  test_experiment_update.py  test_location.py  test_location_create.py  test_location_list.py  test_location_update.py  test_nucleation_event.py  test_nucleation_statistics.py  test_probe.py  test_probe_create.py  test_probe_list.py  test_probe_temperature_reading_with_metadata.py  test_probe_update.py  test_project.py  test_project_create.py  test_project_list.py  test_project_update.py  test_region.py  test_region_create.py  test_region_treatment_summary.py  test_region_update.py  test_sample.py  test_sample_create.py  test_sample_list.py  test_sample_type.py  test_sample_update.py  test_temperature_data_with_probes.py  test_tray.py  test_tray_configuration.py  test_tray_configuration_create.py  (+12 more)
