[project]
name = "spice-client"
version = "0.1.0"
description = "A Python client library for the SPICE ice nucleation API"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "geopandas>=1.1.0",
    "jupyterlab>=4.4.3",
    "pandas>=2.3.0",
    "pydantic>=2.11.7",
    "python-dateutil>=2.9.0.post0",
    "python-keycloak>=5.5.1",
    "typing-extensions>=4.12.2",
    "urllib3>=2.3.0",
]

[tool.uv]
dev-dependencies = [
    "openapi-generator-cli>=7.13.0.post0",
    "pytest>=7.0.0",
    "pytest-cov>=4.0.0",
    "tox>=4.0.0",
]
